@@ -100,6 +100,7 @@ exportMethods(setToCurrent)
 exportMethods(setToFinal)
 exportMethods(show)
 exportMethods(subsampleClustering)
+exportMethods(subsetByCluster)
 exportMethods(tableClusters)
 exportMethods(transformData)
 exportMethods(transformation)
