@@ -21,6 +21,7 @@ Changes:
 	- `renameClusters` and `recolorClusters`: assign new names/colors to clusters within a particular clustering
   - `clusterMatrixColors`: wrapper to `convertClusterLegend` to return matrix like `clusterMatrix` only with colors in place of the internal cluster ids (like existing `clusterMatrixNamed`)
 	- `plotTableClusters` for plotting a heatmap showing the results of `tableClusters`
+	- `subsetByCluster` for subsetting CE object to only those samples in a particular cluster(s) of a clustering.
 * Added arguments:
 	- `whichAssay` to all functions to allow the user to select the assay on which the operations will be performed.
 	- `stopOnErrors` to `RSEC`
